# brown-bot

./: .gitignore  CMakeLists.txt  Makefile  README.md  clear_server_log.sh  config_read.c  queue.c  queue.h  readnumsbuf.c  readnumsbuf.h  remove_client_logs.sh  runme.sh  sendnumsbuf.c  sendnumsbuf.h  socket_help.c  socket_help.h  test.c  test2.c  test_memory.sh  test_n_clients.sh  test_performance.sh  test_zerosum.txt
Client/: client.c  client_help.c
DataStructs/: readnumsbuf.c  sendnumsbuf.h
Logs/: logs.h
Server/: server.c
client/: client.c  client_help.c  client_help.h  get_state_client.c
config_read/: config_read.h
data_structs/: queue.c  queue.h  readnumsbuf.c  readnumsbuf.h  sendnumsbuf.c  sendnumsbuf.h
logs/: logs.c  logs.h
my_examples/: test.c  test2.c
server/: main.c  server.c
src/: config  socket_help.c  socket_help.h  test_zerosum.txt
src/client/: client.c  client_help.c  client_help.h  get_state_client.c
src/config_read/: config_read.c  config_read.h
src/data_structs/: queue.c  queue.h  readnumsbuf.c  readnumsbuf.h  sendnumsbuf.c  sendnumsbuf.h
src/logs/: logs.c  logs.h
src/server/: server.c
src/socket_help/: socket_help.c  socket_help.h
src/test_scripts/: test_memory.sh  test_n_clients.sh  test_performance.sh
tests/: test.c  test2.c
